# kafka-tutorial

./: .envrc  .gitignore  .gitpod.Dockerfile  .gitpod.yml  CLAUDE.md  Cargo.toml  README.md  flake.nix  main.py  setup-kafka.sh  start-kafka.sh
.devcontainer/: devcontainer.json
.github/workflows/: nixos-server.yml  rust.yml  server-integration-tests.yml
backend/: .gitignore  Cargo.toml
backend/common/: Cargo.toml
backend/common/src/: kafka.rs  lib.rs  messages.rs  topics.rs
backend/leaderboard/: Cargo.toml  config.example.toml  config.toml
backend/leaderboard/src/: config.rs  main.rs
backend/leaderboard/src/kafka/: admin.rs  consumer.rs  mod.rs
backend/leaderboard/src/state/: achievements.rs  mod.rs  persistence.rs  team.rs
backend/leaderboard/src/ui/: app.rs  event_buffer.rs  mod.rs
backend/leaderboard/src/ui/widgets/: detail_panel.rs  footer.rs  header.rs  help_overlay.rs  json_viewer.rs  leaderboard_table.rs  metrics.rs  mod.rs  stats_panel.rs  team_detail.rs  watchlist_table.rs
backend/leaderboard/src/validation/: mod.rs  rules.rs
backend/producer/: .gitignore  Cargo.toml  config.example.toml
backend/producer/src/: main.rs
backend/simulator/: Cargo.toml  config.toml
backend/simulator/src/: config.rs  lib.rs  main.rs  stats.rs  team.rs  watchlist.rs
backend/simulator/src/filters/: mod.rs  rules.rs
common/src/: kafka.rs  topics.rs
deploy/docker/: read-actions.sh  read-new-users.sh  read-scorer-state.sh  read-team-stats.sh  setup-redpanda.sh  start-redpanda.sh
docs/: step-0.md  step-1.md  step-2.md  step-3.md  step-4.md  step-5.md  step-6.md
leaderboard/: Cargo.toml  config.toml.example
leaderboard/src/: config.rs  main.rs
leaderboard/src/kafka/: admin.rs  consumer.rs  mod.rs  producer.rs
leaderboard/src/state/: achievements.rs  mod.rs  persistence.rs  team.rs
leaderboard/src/ui/: app.rs  event_buffer.rs  mod.rs
leaderboard/src/ui/widgets/: achievements.rs  actions_table.rs  consumer_groups.rs  event_view.rs  help.rs  leaderboard.rs  metrics.rs  mod.rs  team_detail.rs  watchlist.rs
leaderboard/src/validation/: errors.rs  mod.rs  rules.rs
producer/: .gitignore  Cargo.toml  README.md  config.toml  flake.nix
producer/src/: lib.rs  main.rs
server/: README.md  configuration.nix  flake.nix
server/modules/: kafka-bootstrap.nix  kafka.nix  openstack.nix
server/tests/: default.nix  kafka-test.nix
