[workspace]
members = ["common", "producer", "leaderboard"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.38", features = ["cmake-build", "ssl"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
