[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
fake = { version = "3.1", features=['derive', 'http']}
rand = "0.8"
rdkafka = { version = "0.37", features = ["cmake-build", "ssl"] }

tokio = { version = "1.21", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
config = "0.15"
