[package]
name = "producer"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
rdkafka.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true

fake = { version = "4.4", features = ["derive", "http"] }
rand = "0.9"
structopt = "0.3"
