[package]
name = "kafka-common"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

fake = { version = "4.4", features = ["derive", "http"], optional = true }
rand = { version = "0.9", optional = true }

[features]
default = []
fake-data = ["fake", "rand"]
