[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
kafka-common = { path = "../common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rdkafka.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
config.workspace = true
clap = { version = "4", features = ["derive"] }
futures = "0.3"
dashmap = "6"
